# fullstack-template

./: AGENTS.md  GEMINI.md  README.md
.github/workflows/: ci.yml  python_3_11.yml  python_3_12.yml  python_3_9.yml  test_python.yml
backend/: .pre-commit-config.yaml  README.md  pyproject.toml
backend/backend/: __main__.py  main.py
backend/backend/api/utils/: auth.py
backend/backend/api/webhooks/: stripe.py
backend/backend/models/database/: subscription_info_model.py  user_model.py
backend/backend/services/: blob_storage.py  llm_service.py  repository.py  stripe_service.py
backend/backend/services/providers/: fal_provider.py
backend/backend/utils/: config.py  loggable.py  utils.py
backend/fullstack-template/utils/: loggable.py
backend/tests/: conftest.py  test_utils.py
docs/: README.md
docs/recipes/: auth.md  fal.md  stripe.md  utils.md
frontend/: .gitignore  Pipfile  README.md  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.storybook.config.ts  vercel.json  vitest.config.storybook.ts  vitest.config.ts
frontend/.storybook/: README.md  main.ts  preview.ts  vitest.setup.ts
frontend/api/: index.py
frontend/backend/: .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.py
frontend/backend/fullstack-template/utils/: loggable.py
frontend/backend/fullstack_template/: __init__.py
frontend/backend/fullstack_template/utils/: loggable.py  utils.py
frontend/backend/fullstack_template/utils/scripts/: generate_requirements_txt.py
frontend/backend/tests/: conftest.py  test_utils.py
frontend/scripts/: README.md  postinstall-playwright.js
frontend/src/client/: clients.ts
frontend/src/components/: README.md
frontend/src/components/dashboard/: AccountSummary.stories.tsx  AccountSummary.tsx  README.md
frontend/src/hooks/: useAuthorizedClient.ts
frontend/src/lib/: download-utils.ts  image-utils.ts  utils.ts
frontend/tests/: README.md  visual-helpers.ts
frontend/tests/e2e/: README.md  visual.pw.ts
frontend/tests/storybook/: README.md  coverage.pw.ts
knowledge_base/: README.md  fastapi_dependency_usage.md  frontend_snapshot_tests_when_to_use_and_how_to_run.md  frontend_visual_snapshot_workflow.md  how_to_use_the_oracle.md  playwright_storybook_snapshot_dx_patterns_from_podmocks.md
