[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Backend template project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "aioboto3>=12.0.0",
    "aiobotocore>=2.11.0",
    "motor>=3.3.0",
    "stripe>=8.0.0",
    "pydantic-ai>=0.0.24",
    "openai>=1.0.0",
    "google-auth>=2.0.0",
    "python-jose>=3.3.0",
    "fal-client>=0.4.0",
    "pynacl>=1.5.0",
]

[project.scripts]
# add scripts here that are installed with the environment
compile-reqs = "backend.utils.scripts.generate_requirements_txt:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs"]

[tool.uv.pip]
universal = true

[tool.uv.sources]
backend = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
]

[tool.ruff]
extend-exclude = []
show-fixes = true
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I",  # isort
]
ignore = [
    "E501", # line too long
    "B008", # do not perform calls in argument defaults
]

[tool.pytest.ini_options]
addopts = "--html=logs/report.html --self-contained-html -p no:typeguard"
testpaths = ["tests"]
log_cli = "True"
log_cli_level = "INFO"
log_cli_format = "[%(asctime)s] [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "./logs/pytest.log"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.1",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
]